// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses translation units parses single trans-unit 1`] = `
Array [
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Предложение о чем-то",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
]
`;

exports[`parses translation units parses sources when targets are absent with useSource flag enabled 1`] = `
Array [
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Предложение о чем-то",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Фрагмент Текста",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
]
`;

exports[`parses translation units parses targets 1`] = `
Array [
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Предложение о чем-то",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Фрагмент Текста",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
]
`;

exports[`parses translation units with <g> and <x> tags parses code wrapped in <x> tag 1`] = `
Array [
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Предложение номер ",
      "type": "text",
    },
    Object {
      "data": "x",
      "equivText": "\`один\`",
      "nodeType": "self-closing",
      "syntax": "code",
      "type": "tag",
    },
    Object {
      "data": ".",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
]
`;

exports[`parses translation units with <g> and <x> tags parses em wrapped in <g> tags 1`] = `
Array [
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Предложение номер ",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "*",
      "nodeType": "open",
      "syntax": "em",
      "type": "tag",
    },
    Object {
      "data": "один",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "*",
      "nodeType": "close",
      "syntax": "em",
      "type": "tag",
    },
    Object {
      "data": ".",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
]
`;

exports[`parses translation units with <g> and <x> tags parses em wrapped in <g> tags 2`] = `
Array [
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Предложение номер ",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "~~",
      "nodeType": "open",
      "syntax": "s",
      "type": "tag",
    },
    Object {
      "data": "один",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "~~",
      "nodeType": "close",
      "syntax": "s",
      "type": "tag",
    },
    Object {
      "data": ".",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
]
`;

exports[`parses translation units with <g> and <x> tags parses links wrapped in <g> and <x> tags 1`] = `
Array [
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Предложение номер ",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "[]",
      "nodeType": "open",
      "syntax": "link_text_part",
      "type": "tag",
    },
    Object {
      "data": "один",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "[]",
      "nodeType": "close",
      "syntax": "link_text_part",
      "type": "tag",
    },
    Object {
      "data": "g",
      "equivText": "()",
      "nodeType": "open",
      "syntax": "link_attributes_part",
      "type": "tag",
    },
    Object {
      "data": "x",
      "equivText": "one.md",
      "nodeType": "self-closing",
      "syntax": "link_attributes_href",
      "type": "tag",
    },
    Object {
      "data": "g",
      "equivText": "\\"\\"",
      "nodeType": "open",
      "syntax": "link_attributes_title",
      "type": "tag",
    },
    Object {
      "data": "one",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "\\"\\"",
      "nodeType": "close",
      "syntax": "link_attributes_title",
      "type": "tag",
    },
    Object {
      "data": "g",
      "equivText": "()",
      "nodeType": "close",
      "syntax": "link_attributes_part",
      "type": "tag",
    },
    Object {
      "data": ".",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Предложение номер ",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "[]",
      "nodeType": "open",
      "syntax": "link_text_part",
      "type": "tag",
    },
    Object {
      "data": "два",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "[]",
      "nodeType": "close",
      "syntax": "link_text_part",
      "type": "tag",
    },
    Object {
      "data": "g",
      "equivText": "()",
      "nodeType": "open",
      "syntax": "link_attributes_part",
      "type": "tag",
    },
    Object {
      "data": "x",
      "equivText": "two.md",
      "nodeType": "self-closing",
      "syntax": "link_attributes_href",
      "type": "tag",
    },
    Object {
      "data": "g",
      "equivText": "()",
      "nodeType": "close",
      "syntax": "link_attributes_part",
      "type": "tag",
    },
    Object {
      "data": ".",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
]
`;

exports[`parses translation units with <g> and <x> tags parses ref links wrapped in <g> and <x> tags 1`] = `
Array [
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Предложение номер ",
      "type": "text",
    },
    Object {
      "data": "x",
      "equivText": "[{#T}]",
      "nodeType": "self-closing",
      "syntax": "link_reflink",
      "type": "tag",
    },
    Object {
      "data": "g",
      "equivText": "()",
      "nodeType": "open",
      "syntax": "link_attributes_part",
      "type": "tag",
    },
    Object {
      "data": "x",
      "equivText": "one.md",
      "nodeType": "self-closing",
      "syntax": "link_attributes_href",
      "type": "tag",
    },
    Object {
      "data": "g",
      "equivText": "\\"\\"",
      "nodeType": "open",
      "syntax": "link_attributes_title",
      "type": "tag",
    },
    Object {
      "data": "one",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "\\"\\"",
      "nodeType": "close",
      "syntax": "link_attributes_title",
      "type": "tag",
    },
    Object {
      "data": "g",
      "equivText": "()",
      "nodeType": "close",
      "syntax": "link_attributes_part",
      "type": "tag",
    },
    Object {
      "data": ".",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Предложение номер ",
      "type": "text",
    },
    Object {
      "data": "x",
      "equivText": "[{#T}]",
      "nodeType": "self-closing",
      "syntax": "link_reflink",
      "type": "tag",
    },
    Object {
      "data": "g",
      "equivText": "()",
      "nodeType": "open",
      "syntax": "link_attributes_part",
      "type": "tag",
    },
    Object {
      "data": "x",
      "equivText": "two.md",
      "nodeType": "self-closing",
      "syntax": "link_attributes_href",
      "type": "tag",
    },
    Object {
      "data": "g",
      "equivText": "()",
      "nodeType": "close",
      "syntax": "link_attributes_part",
      "type": "tag",
    },
    Object {
      "data": ".",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
]
`;

exports[`parses translation units with <g> and <x> tags parses samp wrapped in <g> tags 1`] = `
Array [
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Предложение номер ",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "##",
      "nodeType": "open",
      "syntax": "samp",
      "type": "tag",
    },
    Object {
      "data": "один",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "##",
      "nodeType": "close",
      "syntax": "samp",
      "type": "tag",
    },
    Object {
      "data": ".",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
]
`;

exports[`parses translation units with <g> and <x> tags parses strong wrapped in <g> tags 1`] = `
Array [
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Предложение номер ",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "**",
      "nodeType": "open",
      "syntax": "strong",
      "type": "tag",
    },
    Object {
      "data": "один",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "**",
      "nodeType": "close",
      "syntax": "strong",
      "type": "tag",
    },
    Object {
      "data": ".",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
]
`;

exports[`parses translation units with <g> and <x> tags parses sup wrapped in <g> tags 1`] = `
Array [
  Array [
    Object {
      "data": "target",
      "nodeType": "open",
      "type": "tag",
    },
    Object {
      "data": "Предложение номер ",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "^",
      "nodeType": "open",
      "syntax": "sup",
      "type": "tag",
    },
    Object {
      "data": "один",
      "type": "text",
    },
    Object {
      "data": "g",
      "equivText": "^",
      "nodeType": "close",
      "syntax": "sup",
      "type": "tag",
    },
    Object {
      "data": ".",
      "type": "text",
    },
    Object {
      "data": "target",
      "nodeType": "close",
      "type": "tag",
    },
  ],
]
`;
